added few Properties

--- a/classes/DEV.properties
+++ b/classes/DEV.properties
@@ -1,2 +1,6 @@
-anypoint.username=Your_anypoint_username
-anypoint.password=Your_anypoint_password
+anypoint.username=bmpk2
+anypoint.password=Prasanna@22
+anypoint.host=anypoint.mulesoft.com
+anypoint.port=443
+locationToSaveLogs=C:\\Users\\#[System.getProperty("user.name")]\\Desktop
+allowedAppInstancesWithStatus=STARTED,TERMINATED
