added few Properties

--- a/classes/DEV.properties
+++ b/classes/DEV.properties
@@ -1,5 +1,5 @@
-anypoint.username=bmpk2
-anypoint.password=Prasanna@22
+anypoint.username=Your_anypoint_username
+anypoint.password=Your_anypoint_password
 anypoint.host=anypoint.mulesoft.com
 anypoint.port=443
 locationToSaveLogs=C:\\Users\\#[System.getProperty("user.name")]\\Desktop
